--- a/index.html
+++ b/index.html
@@ -17,25 +17,81 @@
 </head>
 
 <body>
-    <div id="main">
-        <nav>
-            <div class="triplebar">≡</div>
-            <span class="mobileMenu">
-                <a id="commission">Commission</a>
-            </span>
-            <div id="logo" class="logo" title="logo"></div>
-            <span class="mobileMenu">
-                <a id="about">About</a>
-            </span>
-        </nav>
-    </div>
+    <nav>
+        <div class="triplebar">≡</div>
+        <span class="mobileMenu">
+            <a id="about">About</a>
+        </span>
+        <div id="logo" class="logo" title="logo"></div>
+        <span class="mobileMenu">
+            <a id="commission">Commission</a>
+        </span>
+    </nav>
+
+    <!-- LANDING ------------------------------------------------------------------------------------------------>
 
     <div id="landing"></div>
 
-    <div>
+    <!-- HOMEPAGE ----------------------------------------------------------------------------------------------->
 
+    <div id="homeContent">
+        <section>
+            <h2>5.5" Pots</h2>
+            <div class="gallery">
+                <div>
+                    <img src="" alt="">
+                    <h4 class="itemTitle">Strawberry Skies</h4>
+                    <p class="itemPrice">$80</p>
+                    <p class="itemDescription">Strawberries against a pink sky, ready to plant your favorite Mt. Hood strawberries</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h4 class="itemTitle">Blackberries</h4>
+                    <p class="itemPrice">$80</p>
+                    <p class="itemDescription">Mmmm... invasive</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h4 class="itemTitle">Rose Garden</h4>
+                    <p class="itemPrice">$80</p>
+                    <p class="itemDescription">Under the gazebo in the International Rose Test Garden</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h4 class="itemTitle">Native Wildflowers</h4>
+                    <p class="itemPrice">$80</p>
+                    <p class="itemDescription">Local native PNW wildflowers!</p>
+                </div>
+            </div>
+            <a class="button" href="#/">View All</a>
+        </section>
+
+
+        <section>
+            <h2>2" Pots</h2>
+            <div class="gallery">
+                <div>
+                    <img src="" alt="">
+                    <h4 class="itemTitle">Forest Spirits</h4>
+                    <p class="itemPrice">$15</p>
+                    <p class="itemDescription">Ya ha ha!</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h4 class="itemTitle">Native Insects</h4>
+                    <p class="itemPrice">$15</p>
+                    <p class="itemDescription">Insects found in the PNW</p>
+                </div>
+            </div>
+            <a class="button" href="#/">View All</a>
+        </section>
     </div>
 
+    <!-- FOOTER ------------------------------------------------------------------------------------------------->
+
+    <footer>
+
+    </footer>
     
     <span style="display: none;">Copyrighted Website. Unauthorized use and/or duplication of this material without express and written permission from this site’s author and/or owner is strictly prohibited. Excerpts and links may be used, provided that full and clear credit is given to Linda Lu with appropriate and specific direction to the original content.</span>
 </body>
