--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </span>
         <div id="logo" class="logo" title="logo"></div>
         <span class="mobileMenu">
-            <a id="commission">Commission</a>
+            <a id="contact">Contact</a>
         </span>
     </nav>
 
