--- a/index.html
+++ b/index.html
@@ -36,19 +36,18 @@
     <!-- HOMEPAGE ----------------------------------------------------------------------------------------------->
 
     <div id="homeContent">
-        <section>
+        <section class="inch_5.5">
             <h2>5.5" Pots</h2>
             <div class="itemsGrid">
-                <div class="strawberrySkies">
+                <div class="strawberry">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
-                            <div class="imageSelector current" data-fileName="potsBig/strawberry.jpeg"></div>
-                            <div class="imageSelector" data-fileName="potsBig/strawberry1.jpeg"></div>
-                            <div class="imageSelector" data-fileName="potsBig/strawberry2.jpeg"></div>
-                            <div class="imageSelector" data-fileName="potsBig/strawberry3.jpeg"></div>
-                            <div class="imageSelector" data-fileName="potsBig/strawberry4.jpeg"></div>
-                            <div class="imageSelector" data-fileName="potsBig/strawberry5.jpeg"></div>
+                            <div class="imageSelector current" data-fileName="pots5.5/strawberry1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry5.jpeg"></div>
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Strawberry Skies</h4>
@@ -95,33 +94,90 @@
             <a style="display:none;" class="button" href="#/">View All</a>
         </section>
 
+        <section class="inch_4.5">
+            <h2>4.5" Pots</h2>
+            <div class="itemsGrid">
+                <div class="hood">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots4.5/hood1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/hood2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/hood3.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Mt. Hood Sunset</h4>
+                    <p class="itemPrice">$40</p>
+                    <p class="itemDescription">Saturated rendition of Mt. Hood</p>
+                </div>
+            </div>
+            <a style="display:none;" class="button" href="#/">View All</a>
+        </section>
 
-        <section>
+
+        <section class="inch_2">
             <h2>2" Pots</h2>
             <div class="itemsGrid">
                 <div class="korok">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
-                            <div class="imageSelector current" data-fileName="potsSmall/korok.jpeg"></div>
-                            <div class="imageSelector" data-fileName="potsSmall/korok2.jpeg"></div>
+                            <div class="imageSelector current" data-fileName="pots2/korok1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/korok2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/korok3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/korok4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/korok5.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/korok6.jpg"></div>
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Forest Spirits</h4>
                     <p class="itemPrice">$15</p>
                     <p class="itemDescription">Ya ha ha!</p>
                 </div>
-                <div style="display:none;">
+                <div class="fungi">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
-                            <div class="imageSelector current" data-fileName="____"></div>
-                            <div class="imageSelector" data-fileName="____"></div>
+                            <div class="imageSelector current" data-fileName="pots2/violetCort1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/violetCort2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/violetCort3.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Fungi</h4>
+                    <p class="itemPrice">$15</p>
+                    <p class="itemDescription">Fungi and fairy lights!</p>
+                </div>
+                <div class="insects">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots2/insects1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects2a.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects2b.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects2c.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects3a.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects3b.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects4a.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects4b.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/insects4c.jpg"></div>
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Native Insects</h4>
                     <p class="itemPrice">$15</p>
                     <p class="itemDescription">Insects found in the PNW</p>
+                </div>
+                <div class="scenery">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots2/forestPark1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/forestPark2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/forestPark3.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Scenery</h4>
+                    <p class="itemPrice">$15</p>
+                    <p class="itemDescription">Places around PDX, this one's of a service road in Forest Park</p>
                 </div>
             </div>
             <a style="display:none;" class="button" href="#/">View All</a>
