--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             <a id="about" rel="noreferrer" title="About" href="#/">About</a>
             <a id="contact" rel="noreferrer" title="Contact" href="#/">Contact</a>
         </span>
+        <div class="contactPopup">
+            <div class="content">
+                <h2>Contact</h2>
+                <p>Email: <a id="email" rel="noreferrer" title="Email" href="mailto:lindaluarts@gmail.com">lindaluarts@gmail.com</a></p>
+                <p>Please reach out for commission inquiries and questions!</p>
+            </div>
+        </div>
     </nav>
 
     <!-- LANDING ------------------------------------------------------------------------------------------------>
