Added social preview

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <meta name="author" content="Linda LU">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="origin">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lindaluart.com">
+    <meta property="og:title" content="Linda Lu Art">
+    <meta property="og:description" content="Painted pots and things">
+    <meta property="og:image" content="https://lindaluart.com/images/socials/ogImg.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://lindaluart.com">
+    <meta property="twitter:title" content="Linda Lu Art">
+    <meta property="twitter:description" content="Painted pots and things">
+    <meta property="twitter:image" content="https://lindaluart.com/images/socials/ogImg.jpg">
+
     <title>Linda Lu Art</title>
     <link rel="icon" href="images/about/favicon.png" type="image/x-icon">
     <link href="stylesheets/styles.css" rel="stylesheet">
