--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
             <a id="about" rel="noreferrer" title="About" href="#/">About</a>
             <a id="contact" rel="noreferrer" title="Contact" href="#/">Contact</a>
         </span>
-        <div class="contactPopup">
-            <div class="content">
+        
+        <div id="navlinksPopup">
+            <div class="content aboutContent">
+                <h2>About</h2>
+                <p>Hello! I paint pots.</p>
+            </div>
+            <div class="content contactContent">
                 <h2>Contact</h2>
                 <p>Email: <a id="email" rel="noreferrer" title="Email" href="mailto:lindaluarts@gmail.com">lindaluarts@gmail.com</a></p>
                 <p>Please reach out for commission inquiries and questions!</p>
