--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         <div id="navlinksPopup">
             <div class="content aboutContent">
                 <h2>About</h2>
-                <p>Hello! I paint pots.</p>
+                <img src="./images/about/profile.jpg" alt="Hello!">
+                <p>Hello! My name is Linda and I paint plant pots inspired by native and naturalized organisms in the PNW region, local scenery from hikes and nearby neighborhoods, and organic forms and color palettes from natural world. I prefer painting plant pots, because I spend way too much money on plant things and am trying to fuel my plant hoarding by selling some of my art.</p>
             </div>
+
             <div class="content contactContent">
                 <h2>Contact</h2>
                 <p>Email: <a id="email" rel="noreferrer" title="Email" href="mailto:lindaluarts@gmail.com">lindaluarts@gmail.com</a></p>
