--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="content aboutContent">
                 <h2>About</h2>
                 <img src="./images/about/profile.jpg" alt="Hello!">
-                <p>Hello! My name is Linda and I paint plant pots inspired by native and naturalized organisms in the PNW region, local scenery from hikes and nearby neighborhoods, and organic forms and color palettes from natural world. I prefer painting plant pots, because I spend way too much money on plant things and am trying to fuel my plant hoarding by selling some of my art. Pieces are made with acrylic and ink on terracotta plant pots, and then coated with polyurethane for waterproofing/weather protection.</p>
-                <p class="hideOnMobile">When I'm not painting or gardening (or working my day job), I'm either attending events with NW Veg and Portland Metro Veggies, keeping up with the Oregon Mycological Society, playing guitar, hiking, or spending time with friends. I love finding new plant-based food spots and spotting fungi on walks. Thank you for visiting my website!</p>
+                <p>Hello! My name is Linda and I paint plant pots inspired by native and naturalized organisms in the PNW region, local scenery from hikes and nearby neighborhoods, and organic forms and color palettes from natural world. The goal is to fuel my plant hoarding by selling some of my art. Pieces are made with acrylic and ink on terracotta plant pots, and then coated with polyurethane for waterproofing/weather protection.</p>
+                <p class="hideOnMobile">When I'm not painting or gardening (or working my day job), I'm either attending events with NW Veg and Portland Metro Veggies, keeping up with the Oregon Mycological Society, playing guitar, hiking, or spending time with friends. I love finding new plant-based food places and spotting fungi on walks. Thank you for visiting my website!</p>
             </div>
 
             <div class="content contactContent">
