Added new entry

--- a/index.html
+++ b/index.html
@@ -94,22 +94,40 @@
         <section class="inch_5.5">
             <h2>5.5" Pots</h2>
             <div class="itemsGrid">
+                <div class="roseGarden">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots5.5/roseGarden/roseGarden1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/roseGarden/roseGarden2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/roseGarden/roseGarden3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/roseGarden/roseGarden4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/roseGarden/roseGarden5.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/roseGarden/roseGarden6.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/roseGarden/roseGarden7.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Rose Garden</h4>
+                    <p class="itemPrice">$80</p>
+                    <p class="itemDescription">Lazy summer afternoon at the gazebo of the Portland International Rose Test Garden</p>
+                </div>
                 <div class="strawberry">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
-                            <div class="imageSelector current" data-fileName="pots5.5/strawberry1.jpg"></div>
-                            <div class="imageSelector" data-fileName="pots5.5/strawberry2.jpg"></div>
-                            <div class="imageSelector" data-fileName="pots5.5/strawberry3.jpg"></div>
-                            <div class="imageSelector" data-fileName="pots5.5/strawberry4.jpg"></div>
-                            <div class="imageSelector" data-fileName="pots5.5/strawberry5.jpeg"></div>
+                            <div class="imageSelector current" data-fileName="pots5.5/strawberry/strawberry1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry/strawberry2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry/strawberry3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry/strawberry4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots5.5/strawberry/strawberry5.jpeg"></div>
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Strawberry Skies</h4>
                     <p class="itemPrice">$80</p>
                     <p class="itemDescription">Strawberries against a pink sky, ready to plant your favorite Mt. Hood strawberries</p>
                 </div>
-                <div style="display:none;">
+
+                <div class="___" style="display:none;">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
@@ -121,19 +139,7 @@
                     <p class="itemPrice">$80</p>
                     <p class="itemDescription">Mmmm... invasive</p>
                 </div>
-                <div style="display:none;">
-                    <div class="gallery">
-                        <div class="featuredImage""></div>
-                        <div class="imageController"><div class="prev"></div>
-                            <div class="imageSelector current" data-fileName="____"></div>
-                            <div class="imageSelector" data-fileName="____"></div>
-                        <div class="next"></div></div>
-                    </div>
-                    <h4 class="itemTitle">Rose Garden</h4>
-                    <p class="itemPrice">$80</p>
-                    <p class="itemDescription">Under the gazebo in the International Rose Test Garden</p>
-                </div>
-                <div style="display:none;">
+                <div class="___" style="display:none;">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
