--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- HOMEPAGE ----------------------------------------------------------------------------------------------->
 
     <div id="homeContent">
-        <section class="inch_5.5">
+        <section id="inch_5.5">
             <h2>5.5" Pots</h2>
             <div class="itemsGrid">
                 <div class="roseGarden">
@@ -155,7 +155,7 @@
             <a style="display:none;" class="button" href="#/">View All</a>
         </section>
 
-        <section class="inch_4.5">
+        <section id="inch_4.5">
             <h2>4.5" Pots</h2>
             <div class="itemsGrid">
                 <div class="hood">
@@ -175,8 +175,31 @@
             <a style="display:none;" class="button" href="#/">View All</a>
         </section>
 
+        <section id="inch_3.5">
+            <h2>3.5" Pots</h2>
+            <div class="itemsGrid">
+                <div class="wildflowers">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots3.5/wildflowers/wildflowers6.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots3.5/wildflowers/wildflowers7.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots3.5/wildflowers/wildflowers8.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots3.5/wildflowers/wildflowers1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots3.5/wildflowers/wildflowers2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots3.5/wildflowers/wildflowers3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots3.5/wildflowers/wildflowers4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots3.5/wildflowers/wildflowers5.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Wildflowers</h4>
+                    <p class="itemPrice">$50</p>
+                    <p class="itemDescription">Aquilegia formosa (Western Columbine) and Primula Dodecatheon hendersonii (Henderson's Shooting Star), with redwood sorrel, stinging nettle, and decorative leaves in the background. Inspired by hikes taken at Rowena Crest and the Columbia River Gorge.</p>
+                </div>
+            </div>
+        </section>
 
-        <section class="inch_2">
+        <section id="inch_2">
             <h2>2" Pots</h2>
             <div class="itemsGrid">
                 <div class="korok">
