--- a/index.html
+++ b/index.html
@@ -175,6 +175,32 @@
             <a style="display:none;" class="button" href="#/">View All</a>
         </section>
 
+        <section id="inch_4.5">
+            <h2>4" Pots</h2>
+            <div class="itemsGrid">
+                <div class="chanterellesPine">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots4/chanterellesPine/chanterellesPine1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-5.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-6.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-7.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Chanterelles and Pine</h4>
+                    <p class="itemPrice">$50</p>Pacific Golden Chanterelle (Cantharellus formosus) and pine (Pinus sp.) cones and needles. Inspired by specimens found in the Tillamook Forest. Set of 3 pots.</p>
+                </div>
+            </div>
+            <a style="display:none;" class="button" href="#/">View All</a>
+        </section>
+
         <section id="inch_3.5">
             <h2>3.5" Pots</h2>
             <div class="itemsGrid">
