--- a/index.html
+++ b/index.html
@@ -192,6 +192,12 @@
                             <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-5.jpg"></div>
                             <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-6.jpg"></div>
                             <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot1-7.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot2-1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot2-2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot2-3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot2-4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot2-5.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4/chanterellesPine/chanterellesPine_pot2-6.jpg"></div>
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Chanterelles and Pine</h4>
