--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Chanterelles and Pine</h4>
-                    <p class="itemPrice">$50</p>Pacific Golden Chanterelle (Cantharellus formosus) and pine (Pinus sp.) cones and needles. Inspired by specimens found in the Tillamook Forest. Set of 3 pots.</p>
+                    <p class="itemPrice">$50</p>
+                    <p class="itemDescription">Pacific Golden Chanterelle (Cantharellus formosus) and pine (Pinus sp.) cones and needles. Inspired by specimens found in the Tillamook Forest. Set of 3 pots.</p>
                 </div>
             </div>
             <a style="display:none;" class="button" href="#/">View All</a>
